--- a/dabom_ws/src/dabom_bringup/config/nav2_params.yaml
+++ b/dabom_ws/src/dabom_bringup/config/nav2_params.yaml
@@ -307,6 +307,7 @@ planner_server:
         tolerance: 1.0e-10
         do_refinement: true
         refinement_num: 2
+        #SmacPlannerHybrid
       # tolerance: 0.5                      # tolerance for planning if unable to reach exact pose, in meters
       # downsample_costmap: false           # whether or not to downsample the map
       # downsampling_factor: 1              # multiplier for the resolution of the costmap layer (e.g. 2 on a 5cm costmap would be 10cm)
