added rotate to goal

--- a/dabom_ws/src/dabom_bringup/config/nav2_params.yaml
+++ b/dabom_ws/src/dabom_bringup/config/nav2_params.yaml
@@ -166,7 +166,7 @@ controller_server:
       short_circuit_trajectory_evaluation: True
       stateful: True
       #critics: ["Oscillation", "BaseObstacle", "GoalAlign", "PathDist", "GoalDist", "Twirling"]
-      critics: ["Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist", "Twirling"]
+      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist", "Twirling"]
       BaseObstacle.scale: 0.05
       #32
       PathAlign.scale: 5.0
@@ -176,9 +176,9 @@ controller_server:
       PathDist.scale: 32.0
       GoalDist.scale: 24.0
       Twirling.scale: 24.0
-      # RotateToGoal.scale: 32.0
-      # RotateToGoal.slowing_factor: 5.0
-      # RotateToGoal.lookahead_time: -1.0
+      RotateToGoal.scale: 32.0
+      RotateToGoal.slowing_factor: 5.0
+      RotateToGoal.lookahead_time: -1.0
 
 local_costmap:
   local_costmap:
