--- a/dabom_ws/src/dabom_bringup/package.xml
+++ b/dabom_ws/src/dabom_bringup/package.xml
@@ -1,13 +1,16 @@
 <package format="3">
   <name>dabom_bringup</name>
   <version>0.0.1</version>
-  <description>Master launch package for dabom system</description>
-  <maintainer email="christopher@karg.ca">Christopher</maintainer>
+  <description>Master launch package for bringing up the dabom system</description>
+  <maintainer email="christopher@karg.ca">Christopher Karg</maintainer>
   <license>Apache-2.0</license>
 
+  <!-- Build tool dependencies -->
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_python</buildtool_depend>
 
-  <depend>rclcpp</depend>
+  <!-- Runtime dependencies -->
+  <depend>rclpy</depend>
   <depend>inv_kin</depend>
   <depend>odom</depend>
   <depend>rplidar_ros</depend>
@@ -18,7 +21,12 @@
   <depend>rviz2</depend>
   <depend>joy</depend>
 
+  <!-- Test dependencies -->
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+  <test_depend>pytest</test_depend>
+
   <export>
-  <build_type>ament_python</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
