fix error in debug output

--- a/Arduino_Code/platformio.ini
+++ b/Arduino_Code/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-monitor_echo = yes
+monitor_speed = 19200
+; monitor_echo = yes
 lib_deps = 
 	paulstoffregen/Encoder@^1.4.4
