--- a/dabom_ws/src/dabomb_description/package.xml
+++ b/dabom_ws/src/dabomb_description/package.xml
@@ -7,19 +7,17 @@
   <maintainer email="christopher@karg.ca">c</maintainer>
   <license>Apache-2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-
   <depend>xacro</depend>
-  <depend>urdf</depend>
+  <depend>rviz2</depend>
+  <depend>robot_state_publisher</depend>
+  <depend>joint_state_publisher</depend>
+  <depend>joint_state_publisher_gui</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
-  <depend>robot_state_publisher</depend>
-  <depend>joint_state_publisher</depend> 
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  
+  
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
