--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -5,14 +5,13 @@ launch_config:
   use_nav2: true          # Set to true to launch Nav2 (Navigation Stack)
   use_rviz: true          # Set to true to launch RViz for visualization
   use_robot_state: true  # Set to true to launch robot state publisher
-  use_xbox: true          # Set to true to launch Xbox controller
+  use_xbox: false          # Set to true to launch Xbox controller
 
 
   # Control RPi nodes
   use_inv_kin: false       # Set to true to launch inv_kin_node
   use_odom: false          # Set to true to launch odom_node
-  use_rplidar: false       # Set to true to launch rplidar_node
-  use_serial_talker: false # Set to true to launch serial talker
-  use_x_serial: false      # Set to true to launch x_serial
-  use_slam_pi: false          # Set to true to launch SLAM Toolbox
+  use_rplidar: true       # Set to true to launch rplidar_node
+  use_serial_talker: true # Set to true to launch serial talker
+  use_slam_pi: true          # Set to true to launch SLAM Toolbox
   use_nav2_pi: false          # Set to true to launch Nav2 (Navigation Stack)
