--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -9,8 +9,8 @@ launch_config:
 
 
   # Control RPi nodes
-  use_inv_kin: false       # Set to true to launch inv_kin_node
-  use_odom: false          # Set to true to launch odom_node
+  use_inv_kin: true       # Set to true to launch inv_kin_node
+  use_odom: true        # Set to true to launch odom_node
   use_rplidar: true       # Set to true to launch rplidar_node
   use_serial_talker: true # Set to true to launch serial talker
   use_slam_pi: true          # Set to true to launch SLAM Toolbox
