--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -1,12 +1,12 @@
 # Launch configuration parameters (to control which components to launch)
 launch_config:
   # Control Computer nodes
-  use_joy: false           # Set to true to launch joystick control
-  use_slam: false # Set to true to launch SLAM Toolbox
+  use_joy: false          # Set to true to launch joystick control
+  use_slam: false          # Set to true to launch SLAM Toolbox
   use_nav2: true          # Set to true to launch Nav2 (Navigation Stack)
-  use_rviz: true          # Set to true to launch RViz for visualization
-  use_robot_state: true  # Set to true to launch robot state publisher
-  use_xbox: true          # Set to true to launch Xbox controller
+  use_rviz: false          # Set to true to launch RViz for visualization
+  use_gazebo: false        # Set to true to launch robot state publisher
+  use_xbox: false          # Set to true to launch Xbox controller
 
 
   # Control RPi nodes
